
[package]
name = "parser_ext"
version = "0.1.0"
edition = "2021"
# autobins = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "0.17.0"

[dev-dependencies]
pgrx-tests = "0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "pgrx_embed_parser_ext"
path = "src/bin/pgrx_embed.rs"