[package]
name = "parser_ext"
version = "0.1.0"
edition = "2021"
# autobins = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg17"]

pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "0.17.0"

[dev-dependencies]
pgrx-tests = "0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "pgrx_embed_parser_ext"
path = "src/bin/pgrx_embed.rs"